maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:9: error: ')' expected but 'case' found.
      case a == 2 => right()
      ^